Fix for the service plan song selector overflowing on mobile

--- a/kanisa/static/kanisa/css/kanisa.css
+++ b/kanisa/static/kanisa/css/kanisa.css
@@ -489,6 +489,7 @@ From http://themeloom.com/2013/02/tips-embed-google-maps-and-calendars-in-a-resp
 .service-songs-edit select,
 .service-songs-edit .chosen-container {
     margin-bottom: 1em;
+    width: 100%;
 }
 
 table.song-table form {
